Fix redlines alignment

--- a/sass/blocks/_red_lines.scss
+++ b/sass/blocks/_red_lines.scss
@@ -20,7 +20,7 @@
       font-size: 20px;
       line-height: 18px;
       vertical-align: middle;
-      margin-left: -20px;
+      margin-left: -16px;
       margin-right: 8px;
     }
   }
